kube/deploy/core/4-tls/cert-manager/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &n cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *n
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: '10250'
  egress:
    - toEntities: [kube-apiserver]
